<resources>
    <string name="app_name">Medca</string>
    <string name="hintname">Digite o nome do paciente</string>
    <string name="hintdata">Digite a data de nascimento</string>
    <string name="txtselecione">Selecione</string>
    <string name="txtFeminino">Feminino</string>
    <string name="txtMasculino">Masculino</string>
    <string name="txtAgendar">Agendar \nConsulta </string>
    <string name="txtSalvar">Salvar</string>
    <string name="txtCadastro">Cadastro de \nConsultas</string>
    <string name="txtCadastrar">Cadastrar Consulta</string>
    <string name="txtListar">Listar consultas</string>
    <string name="txtNova">Cadastrar nova Consulta </string>

</resources>