<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo">
        </ImageView>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="344dp"
        android:layout_height="67dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/ic_launcher_foreground"
        android:gravity="center"
        android:text="@string/txtAgendar"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/black"
        android:text="@string/txtSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spEspecializacao" />

    <EditText
        android:id="@+id/etData"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hintdata"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <Spinner
        android:id="@+id/spEspecializacao"
        android:layout_width="383dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etData" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/hintname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/txtselecione"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spEspecializacao"
        tools:ignore="MissingConstraints,UnknownId" />




    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_selected"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radio_dois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/txtFeminino"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="441dp" />

        <RadioButton
            android:id="@+id/radio_um"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/txtMasculino"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="441dp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>